Fix the overflow issue of ruby text

--- a/sass/han/hyu/_hruby.sass
+++ b/sass/han/hyu/_hruby.sass
@@ -62,7 +62,6 @@ hruby
       // box
       height: 1em
       width: 600%
-      overflow: hidden
       // typography
       content: attr( annotation )
       line-height: 1
